--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src='C:\Users\digos\Dropbox\JS\Angela\Modules\Introduction to HTML\HTML Personal Site\images\rodrigo.jpg' alt='Profile Picture'></td>
+                <td><img src='images\rodrigo.jpg' alt='Profile Picture'></td>
                 <td><h1 style='font-family: Arial Black;'>Rodrigo Schroeder</h1>
                     <p style='font-family: Arial;'><em>Programmer, that loves <b>python!</b><em></p>
                     <p style='font-family: sans-serif;'>Axl Rose was born on February 6, 1962, in Lafayette, Indiana. He eventually moved to California, working odd jobs and playing in bands 
